@@ -69,6 +69,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.bakery.main.App</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
